syntax = "proto3";

option go_package = "/book";

package book;

service BookService {
  rpc SaveBooking(BookRequest) returns (BookResponse);
}

message BookRequest {
  string from = 1;
  string helper = 2;
  string desc = 3;
}

message BookResponse{
  string id = 1;
  string status = 2;
}